fixing width on mobiles, 2nd attempt

--- a/src/styles/components/_toDoList.scss
+++ b/src/styles/components/_toDoList.scss
@@ -114,7 +114,7 @@ li {
   }
 
   .list-of-items {
-    min-width: 400px;
+    min-width: 360px;
   }
   button {
     padding: 8px;
